Carfax top rated service

--- a/html/index.html
+++ b/html/index.html
@@ -384,8 +384,8 @@
     <div class="transparent width-control">
       <div class="height"></div>
 
-      <div style="height: 120px;" class="uhaul-image">
-        <!-- <img src="img/uhaullogo.png" alt="Uhaul Rental" > -->
+      <div class="award-image">
+        <img src="img/carfax1.png" alt="Carfax Top-Rated Service Shop 2019" />
       </div>
       <div class="height"></div>
     </div>
