--- a/html/index.html
+++ b/html/index.html
@@ -151,9 +151,9 @@
         <div class="front top-page">
           <div
             class="quarter-height"
-            style="height: 40px; background-color: #ec7063;"
+            style="height: 40px; background-color: #ec7063"
           >
-            <span id="notification-text" style="position: relative; top: 10px;"
+            <span id="notification-text" style="position: relative; top: 10px"
               >We are open during normal business hours</span
             >
           </div>
@@ -304,21 +304,20 @@
           <div class="card">
             <img
               class="card-img-top img-circle"
-              src="img/ross3L.jpg"
-              alt="Ross Sadler"
+              src="img/sarah.jpg"
+              alt="Sarah Peritz"
             />
             <div class="card-block">
-              <h4 class="card-title">Ross Sadler</h4>
+              <h4 class="card-title">Sarah Peritz</h4>
               <p class="card-text">
-                <small class="text-muted">Mechanic</small>
+                <small class="text-muted">Tech</small>
               </p>
               <p class="card-text">
-                Ross has over 10 years of auto repair experience. He worked with
-                Matt at a local car dealership. It is immediately apparent upon
-                meeting Ross that he listens to some dark music. But when you
-                get to know Ross, you'll realize that he is not only a smart and
-                capable individual, but also surprisingly friendly. Just don't
-                put your hand too close to his food.
+                Sarah rolled into the shop one day looking to learn about
+                automotive repair. We were looking for a psycholist (but would
+                accept a psychology major). Things have a funny way of working
+                out. She's become a real asset around the shop, we just hope we
+                don't make her crazy.
               </p>
             </div>
           </div>
