--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
         "legalName": "Reid Repairs, LLC",
         "description": "Independently owned and operated auto repair shop with over 15 years of experience. Happy to answer questions you may have about your vehicle.",
         "telephone": "267-454-4682",
-        "openingHours": ["Mo,Tu,We,Th,Fr 08:00-17:30"],
+        "openingHours": ["Mo-Th 08:00-17:30", "Fr 8:00-16:30"],
         "geo": {
           "@type": "GeoCoordinates",
           "latitude": "40.177346",
@@ -159,8 +159,13 @@
           </div>
           <div>
             <h2>Hours</h2>
-            <p>Monday - Friday 8:00 to 5:30</p>
-            <p>Saturday - Appointment Only</p>
+            <p>Monday 8:00 to 5:30</p>
+            <p>Tuesday 8:00 to 5:30</p>
+            <p>Wednesday 8:00 to 5:30</p>
+            <p>Thursday 8:00 to 5:30</p>
+            <p>Friday 8:00 to 5:30</p>
+            <p>Saturday Closed</p>
+            <p>Sunday Closed</p>
             <h2>Location</h2>
             <p>
               <span
