--- a/html/index.html
+++ b/html/index.html
@@ -159,13 +159,38 @@
           </div>
           <div>
             <h2>Hours</h2>
-            <p>Monday 8:00 to 5:30</p>
-            <p>Tuesday 8:00 to 5:30</p>
-            <p>Wednesday 8:00 to 5:30</p>
-            <p>Thursday 8:00 to 5:30</p>
-            <p>Friday 8:00 to 5:30</p>
-            <p>Saturday Closed</p>
-            <p>Sunday Closed</p>
+
+            <table>
+              <tr>
+                <td>Monday</td>
+                <td>8:00 to 5:30</td>
+              </tr>
+              <tr>
+                <td>Tuesday</td>
+                <td>8:00 to 5:30</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>8:00 to 5:30</td>
+              </tr>
+              <tr>
+                <td>Thursday</td>
+                <td>8:00 to 5:30</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>8:00 to 4:30</td>
+              </tr>
+              <tr>
+                <td>Saturday</td>
+                <td>Closed</td>
+              </tr>
+              <tr>
+                <td>Sunday</td>
+                <td>Closed</td>
+              </tr>
+            </table>
+
             <h2>Location</h2>
             <p>
               <span
