--- a/html/index.html
+++ b/html/index.html
@@ -108,6 +108,13 @@
       h3 {
         font-size: 36px !important;
       }
+      table {
+        margin: 0px auto;
+        text-align: left;
+      }
+      td {
+        padding: 4px 20px 4px 26px;
+      }
       #circle {
         width: 50%;
         min-width: 230px;
