Remove red flag

--- a/html/index.html
+++ b/html/index.html
@@ -135,14 +135,14 @@
     <div class="content static" id="content">
       <div>
         <div class="front top-page">
-          <div
+          <!-- <div
             class="quarter-height"
             style="height: 40px; background-color: #ec7063"
           >
             <span id="notification-text" style="position: relative; top: 10px"
               >We are open during normal business hours</span
             >
-          </div>
+          </div> -->
           <div>
             <h2>Hours</h2>
 
