--- a/html/index.html
+++ b/html/index.html
@@ -773,7 +773,7 @@
           const formData = JSON.stringify($("#ss-form").serializeArray());
 
           $.ajax({
-            url: "https://reidrepairs.com:3000/form/",
+            url: "https://127.0.0.1:3000/form/",
             data: formData,
             type: "POST",
             dataType: "json",
