--- a/html/index.html
+++ b/html/index.html
@@ -777,7 +777,7 @@
             data: formData,
             type: "POST",
             dataType: "json",
-            contentType: "application/json",
+            contentType: "application/x-www-form-urlencoded",
             success: function (data) {
               $("#confirmation").show();
               $("#ss-form").hide();
