--- a/html/index.html
+++ b/html/index.html
@@ -766,28 +766,56 @@
         });
       }
       function customFormJS() {
-        $("#confirmation").hide();
-        $("#ss-form").submit(function (e) {
-          e.preventDefault();
+        const url = "https://reidrepairs.com:3000/form/";
+        const button = document.getElementById("ss-form");
+        button.addEventListener(
+          "click",
+          function (e) {
+            e.preventDefault();
+            fetch(url, {
+              method: "POST",
+              body: JSON.stringify($("#ss-form")),
+            })
+              .then(
+                (response) => {
+                  console.log(response);
+                  $("#confirmation").show();
+                  $("#ss-form").hide();
+                } // .json(), etc.
+                // same as function(response) {return response.text();}
+              )
+              .then((html) => {
+                console.log(html);
+              })
+              .catch((error) => {
+                console.log("oops. There was error here. ", xhr, status, error);
+                $("#confirmation").show();
+                $("#ss-form").hide();
+              });
+          },
+          false
+        );
 
-          const formData = JSON.stringify($("#ss-form").serializeArray());
-
-          $.ajax({
-            url: "https://reidrepairs.com:3000/form/",
-            data: formData,
-            type: "POST",
-            contentType: "application/x-www-form-urlencoded",
-            success: function (data) {
-              $("#confirmation").show();
-              $("#ss-form").hide();
-            },
-            error: function (xhr, status, error) {
-              console.log("oops. There was error here. ", xhr, status, error);
-              $("#confirmation").show();
-              $("#ss-form").hide();
-            },
-          });
-        });
+        // $("#confirmation").hide();
+        // $("#ss-form").submit(function (e) {
+        //   e.preventDefault();
+        //   const formData = JSON.stringify($("#ss-form").serializeArray());
+        //   $.ajax({
+        //     url: "https://reidrepairs.com:3000/form/",
+        //     data: formData,
+        //     type: "POST",
+        //     contentType: "application/x-www-form-urlencoded",
+        //     success: function (data) {
+        //       $("#confirmation").show();
+        //       $("#ss-form").hide();
+        //     },
+        //     error: function (xhr, status, error) {
+        //       console.log("oops. There was error here. ", xhr, status, error);
+        //       $("#confirmation").show();
+        //       $("#ss-form").hide();
+        //     },
+        //   });
+        // });
       }
     </script>
     <script>
