--- a/html/index.html
+++ b/html/index.html
@@ -788,7 +788,7 @@
                 console.log(html);
               })
               .catch((error) => {
-                console.log("oops. There was error here. ", xhr, status, error);
+                // console.log("oops. There was error here. ", xhr, status, error);
                 $("#confirmation").show();
                 $("#ss-form").hide();
               });
