--- a/html/index.html
+++ b/html/index.html
@@ -766,7 +766,7 @@
         });
       }
       function customFormJS() {
-        const url = "https://reidrepairs.com:3000/form/";
+        const url = "https://localhost:3000/form/";
         const button = document.getElementById("ss-form");
         button.addEventListener(
           "click",
