--- a/html/index.html
+++ b/html/index.html
@@ -317,7 +317,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <!-- <div class="card">
             <img
               class="card-img-top img-circle"
               src="img/sarah.jpg"
@@ -336,7 +336,7 @@
                 don't make her crazy.
               </p>
             </div>
-          </div>
+          </div> -->
           <div class="card">
             <img
               class="card-img-top img-circle"
